--- a/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
@@ -3,8 +3,8 @@
 	<div>
 		<a href="#" title="Account Settings and Profile Page">Joe Tester</a> <em>Administrator</em>
 		<ul>
-			<li><a class="button-link" href="#" title="This is my title!" rel="tooltip">view website</a></li>
-			<li><a class="button-link" href="#" title="And this is Sparta!" rel="tooltip">logout</a></li>
+			<li><a class="button-link" href="#">view website</a></li>
+			<li><a class="button-link" href="@Url.Action("Signout", "User")">logout</a></li>
 		</ul>
 	</div>
 </section>
