--- a/apps/ForumComposite/Views/Shared/_Layout.cshtml
+++ b/apps/ForumComposite/Views/Shared/_Layout.cshtml
@@ -5,7 +5,13 @@
 		<link rel="stylesheet" type="text/css" href="../../Content/themes/swiss/style.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="../../Content/themes/swiss/custom.css" media="screen" />
 		<link rel="shortcut icon" href="../../Content/themes/swiss/favicon.png" type="image/x-icon" />
-		<script src="../../Scripts/jquery-1.5.1.js" type="text/javascript"> </script>
+		<link rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css"/>
+		<script src="@Url.Content("~/Scripts/jquery-1.6.2.min.js")" type="text/javascript"> </script>
+		<script src="http://jqueryui.com/ui/jquery.ui.core.js" type="text/javascript"></script>
+		<script src="http://jqueryui.com/ui/jquery.ui.widget.js" type="text/javascript"></script>
+		<script src="http://jqueryui.com/ui/jquery.ui.tabs.js" type="text/javascript"></script>
+
+
 	</head>
 	<body id="vanilla_discussions_index" class="Vanilla Discussions index ">
 		<div id="wrapper">
