--- a/apps/AdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/AdminComposite/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
+
 	<link rel="shortcut icon" href="@Url.Content("~/Content/chromatron/img/favicon.ico")">
 	<link rel="apple-touch-icon" href="@Url.Content("~/Content/chromatron/img/apple-touch-icon.png")">
 	<link href="@Url.Content("~/Content/chromatron/css/style.css")" rel="stylesheet" type="text/css"/>
@@ -19,40 +20,59 @@
 	<link href="@Url.Content("~/Content/chromatron/css/jquery.tipsy.css")" rel="stylesheet" type="text/css"/>
 	<link href="@Url.Content("~/Content/chromatron/css/jquery.visualize.css")" rel="stylesheet" type="text/css"/>
 	<link href="@Url.Content("~/Content/chromatron/css/jquery.wysiwyg.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/admin-styles.css")" rel="stylesheet" type="text/css"/>
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic' rel='stylesheet' type='text/css'> 
+	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" >
+	<link href="@Url.Content("~/Content/multiselect/jquery.multiselect.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/multiselect/style.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/multiselect/prettify.css")" rel="stylesheet" type="text/css"/>
+	
+	<script src="http://code.jquery.com/jquery-1.7.min.js" type="text/javascript"> </script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
+	<script src="@Url.Content("~/Content/chromatron/js/libs/selectivizr.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.facebox.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.tipsy.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.wysiwyg.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.datatables.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.datepicker.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.fileinput.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.visualize.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.visualize.tooltip.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/chromatron/js/jquery/excanvas.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/chromatron/js/script.js")" type="text/javascript"> </script>
+	<script src="@Url.Content("~/Content/scripts.js")" type="text/javascript"></script>
+	<script src="http://www.appelsiini.net/projects/jeditable/jquery.jeditable.js" type="text/javascript"></script>
+	<script src="http://www.appelsiini.net/projects/viewport/jquery.viewport.js" type="text/javascript"></script>
+	<script src="@Url.Content("~/Content/multiselect/prettify.js")" type="text/javascript"></script>
+	<script src="@Url.Content("~/Content/multiselect/jquery.multiselect.min.js")" type="text/javascript"></script>
 </head>
 <body>
 	<div>
+		
 		<section role="navigation">
-			<header><a href="/" title="Back to Homepage"></a>
+			<header>
 				<h1>Create and manage custom forums</h1>
 			</header>
-			@RenderPage("LeftRail/Badge.cshtml")
-			<nav id="main-nav">
-				@RenderPage("LeftRail/SitewideNavigation.cshtml")
-			</nav>
-			@RenderSection("Sidebar", required: false)
+
+			@if (IsSectionDefined("LeftRail"))
+			{
+				@RenderSection("LeftRail", false);
+			}
+			else
+			{
+				@RenderPage("LeftRail/Badge.cshtml")
+
+				<nav id="main-nav">
+					@RenderPage("LeftRail/SitewideNavigation.cshtml")
+				</nav>
+			}
 		</section>
+
 		<section role="main">
-			@RenderPage("Header/InfoWidgets.cshtml")
 			@RenderSection("Breadcrumbs", required: false)
-			<article class="clearfix">
-				@RenderBody()
-			</article>
+			
+			@RenderBody()
 		</section>
-		﻿<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"> </script>
-		<script type="text/javascript">!window.jQuery && document.write(unescape('%3Cscript src="js/jquery/jquery-1.5.1.min.js"%3E%3C/script%3E'))</script>
-		<script src="@Url.Content("~/Content/chromatron/js/libs/selectivizr.js")" type="text/javascript"> </script>
-		<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.facebox.js")" type="text/javascript"> </script>
-		<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.tipsy.js")" type="text/javascript"> </script>
-		<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.wysiwyg.js")" type="text/javascript"> </script>
-		<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.datatables.js")" type="text/javascript"> </script>
-		<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.datepicker.js")" type="text/javascript"> </script>
-		<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.fileinput.js")" type="text/javascript"> </script>
-		<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.visualize.js")" type="text/javascript"> </script>
-		<script src="@Url.Content("~/Content/chromatron/js/jquery/jquery.visualize.tooltip.js")" type="text/javascript"> </script>
-		<script src="@Url.Content("~/Content/chromatron/js/jquery/excanvas.js")" type="text/javascript"> </script>
-		<script src="@Url.Content("~/Content/chromatron/js/script.js")" type="text/javascript"> </script>
 	</div>
 </body>
 </html>
