--- a/apps/AdminComposite/Views/User/Invite.cshtml
+++ b/apps/AdminComposite/Views/User/Invite.cshtml
@@ -2,25 +2,39 @@
 	ViewBag.Title = "Invite Users";
 }
 
+<script type="text/javascript">
+	$(document).ready(function () {
+		$("#forum-select").multiselect();
+	});
+</script>
+
 <div class="article-container">
-	<header>
-		<h2>@ViewBag.Title</h2>
-	</header>
+	<article>
+		<header>
+			<h2>@ViewBag.Title</h2>
+		</header>
+	</article>
 	<section>
-		<h3>Lorem Ipsum</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi auctor euismod ipsum
-			id molestie. Donec consequat nunc et tortor tristique sed mollis justo sodales.
-			Nulla enim nibh, faucibus non ornare in, egestas nec felis. Morbi id sem nunc, eu
-			cursus nibh. Curabitur sem sapien, dignissim sit amet posuere a, condimentum ornare
-			nulla. Ut accumsan tempor tincidunt. Nulla massa est, bibendum sed malesuada vitae,
-			mattis id sem. Nam blandit facilisis sem sit amet rutrum. Ut ac quam bibendum quam
-			elementum cursus id et justo. Maecenas sit amet elementum justo.</p>
-		<p>Suspendisse est sem, eleifend at bibendum tristique, condimentum vitae nibh. Curabitur
-			dapibus, purus a tincidunt ultricies, lorem quam congue justo, quis imperdiet sem
-			ante nec lacus. Donec sem libero, ultricies in dictum eu, sagittis a nisi. Phasellus
-			varius porttitor odio, eget sodales odio faucibus in. Donec convallis sapien velit.
-			Donec porttitor sollicitudin lorem nec vestibulum. Pellentesque habitant morbi tristique
-			senectus et netus et malesuada fames ac turpis egestas.</p>
+		<div class="input-container">
+			<label for="forum-select">Select Forum(s)</label>
+			<br/>
+			<select id="forum-select" multiple="multiple">
+				<option>Forum 1</option>
+				<option>Forum 2</option>
+				<option>Forum 3</option>
+			</select>
+		</div>
+
+		<div class="input-container">
+			<label for="email-addresses">Email Addresses</label>
+			<p class="note">
+				Enter 1 email address per line to invite users to the selected forum
+			</p>
+			<br/>
+			<textarea rows="35" cols="75" id="email-addresses"></textarea>
+		</div>
+
+		<input type="button" class="button" value="Invite Users"/>
 	</section>
 	<footer>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et <a href="#">
