--- a/apps/AdminComposite/Views/User/List.cshtml
+++ b/apps/AdminComposite/Views/User/List.cshtml
@@ -7,9 +7,7 @@
 		<header>
 			<h2>@ViewBag.Title</h2>
 		</header>
-		<p>
-			Lorem ipsum dolor sit consecutator amet.
-		</p>
+		<p>Lorem ipsum dolor sit consecutator amet. </p>
 		<table>
 			<thead>
 				<tr>
