--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -1,22 +1,9 @@
 ﻿@model object
-
 @{
 	ViewBag.Title = "Custom Badges";
 }
-
 <script type="text/javascript">
 	$(document).ready(function () {
-		$("#badge-type-select").tabs();
-
-		$(".badge-availability").multiselect({
-			checkAllText: "Check all",
-			uncheckAllText: "Uncheck all",
-			noneSelectedText: "Not available in any forums",
-			selectedText: function (numberChecked, numberItems, checkedItems) {
-				return "Available in " + ((numberChecked == numberItems) ? "all forums" : numberChecked + " " + (numberChecked == 1 ? "forum" : "forums"));
-			}
-		});
-
 		$("#create-badge").click(function () {
 			$("#custom-badge-tab").click();
 
@@ -31,141 +18,61 @@
 		});
 	});
 </script>
-
 <article>
 	<header>
 		<h2>Badges</h2>
-		<input type="button" id="create-badge" class="button" value="New Badge" style="float:right"/>
+		<input type="button" id="create-badge" class="button" value="New Badge" style="float: right" />
 	</header>
+	<p>Lorem ipsum dolor sit consecutator amet. </p>
+	<table>
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Trigger</th>
+				<th>Image</th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Lifetime Achievement Award</td>
+				<td>Total Points greater than 100</td>
+				<td>(image)</td>
+				<td><a href="#">Edit</a></td>
+			</tr>
+			<tr>
+				<td>Key Contributor</td>
+				<td>Total Points greater than 100</td>
+				<td>(image)</td>
+				<td><a href="#">Edit</a></td>
+			</tr>
+			<tr>
+				<td>I've Got Something to Say</td>
+				<td>Total Points greater than 100</td>
+				<td>(image)</td>
+				<td><a href="#">Edit</a></td>
+			</tr>
+			<tr>
+				<td>Conversation Starter</td>
+				<td>Total Points greater than 100</td>
+				<td>(image)</td>
+				<td><a href="#">Edit</a></td>
+			</tr>
+			<tr>
+				<td>Well Received Post</td>
+				<td>Total Points greater than 100</td>
+				<td>(image)</td>
+				<td><a href="#">Edit</a></td>
+			</tr>
+			<tr>
+				<td>The Never Ending Thread</td>
+				<td>Total Points greater than 100</td>
+				<td>(image)</td>
+				<td><a href="#">Edit</a></td>
+			</tr>
+		</tbody>
+	</table>
 </article>
-
-<div id="badge-type-select">
-	<ul>
-		<li><a href="#system-badges" id="system-badge-tab" class="active">System</a></li>
-		<li><a href="#custom-badges" id="custom-badge-tab">Custom</a></li>
-	</ul>
-
-	<div id="system-badges">
-		<table>
-			<thead>
-				<tr>
-					<th>Badge</th>
-					<th>Forum Availability</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Lifetime Achievement Award</td>
-					<td>
-						<select multiple="multiple" class="badge-availability">
-							<option selected="selected">Forum 1</option>
-							<option selected="selected">Forum 2</option>
-							<option selected="selected">Forum 3</option>
-						</select>
-					</td>
-				</tr>
-				<tr>
-					<td>Key Contributor</td>
-					<td>
-						<select multiple="multiple" class="badge-availability">
-							<option selected="selected">Forum 1</option>
-							<option selected="selected">Forum 2</option>
-							<option selected="selected">Forum 3</option>
-						</select>
-					</td>
-				</tr>
-				<tr>
-					<td>I've Got Something to Say</td>
-					<td>
-						<select multiple="multiple" class="badge-availability">
-							<option selected="selected">Forum 1</option>
-							<option selected="selected">Forum 2</option>
-							<option selected="selected">Forum 3</option>
-						</select>
-					</td>
-				</tr>
-				<tr>
-					<td>Conversation Starter</td>
-					<td>
-						<select multiple="multiple" class="badge-availability">
-							<option selected="selected">Forum 1</option>
-							<option selected="selected">Forum 2</option>
-							<option selected="selected">Forum 3</option>
-						</select>
-					</td>
-				</tr>
-				<tr>
-					<td>Well Received Post</td>
-					<td>
-						<select multiple="multiple" class="badge-availability">
-							<option selected="selected">Forum 1</option>
-							<option selected="selected">Forum 2</option>
-							<option selected="selected">Forum 3</option>
-						</select>
-					</td>
-				</tr>
-				<tr>
-					<td>The Never Ending Thread</td>
-					<td>
-						<select multiple="multiple" class="badge-availability">
-							<option selected="selected">Forum 1</option>
-							<option selected="selected">Forum 2</option>
-							<option selected="selected">Forum 3</option>
-						</select>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-
-	<div id="custom-badges">
-		<table>
-			<thead>
-				<tr>
-					<th>Badge</th>
-					<th>Trigger</th>
-					<th>Criteria</th>
-					<th>Value</th>
-					<th>&nbsp;</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Old Timer</td>
-					<td>User.Created</td>
-					<td>>=</td>
-					<td>[Today] - 365</td>
-					<td>
-						<select multiple="multiple" class="badge-availability">
-							<option>Forum 1</option>
-							<option>Forum 2</option>
-							<option>Forum 3</option>
-						</select>
-
-						<a href="#">Delete</a>
-					</td>
-				</tr>
-				<tr>
-					<td>OCD</td>
-					<td>User.ConsecutiveDays</td>
-					<td>>=</td>
-					<td>200</td>
-					<td>
-						<select multiple="multiple" class="badge-availability">
-							<option>Forum 1</option>
-							<option>Forum 2</option>
-							<option>Forum 3</option>
-						</select>
-
-						<a href="#">Delete</a>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-</div>
-
-
 @section Breadcrumbs {
 	<ul id="breadcrumbs">
 		<li><a href="@Url.Action("Index", "Dashboard")" title="Back to Homepage">Home</a></li>
