--- a/apps/AdminComposite/Views/Shared/_ModeratorPanel.cshtml
+++ b/apps/AdminComposite/Views/Shared/_ModeratorPanel.cshtml
@@ -1,5 +1,4 @@
 ﻿@model object
-
 <script type="text/javascript">
 	$(document).ready(function () {
 		$($(".moderation-item.unread")[0]).addClass("current-unread");
@@ -72,35 +71,49 @@
 		}
 	}
 </script>
-
 <section>
-	<label for="select-moderation">Moderate</label>
-	<select id="select-moderation">
-		<option @if(ViewBag.ModerationType=="Post"){<text>selected="selected"</text>}>Posts</option>
-		<option @if(ViewBag.ModerationType=="Comment"){<text>selected="selected"</text>}>Comments</option>
-	</select>
+	<p>
+		<label for="select-moderation">Moderate</label>
+		<select id="select-moderation">
+			<option @if (ViewBag.ModerationType == "Post")
+					 {<text>selected="selected"</text>}>Posts</option>
+			<option @if (ViewBag.ModerationType == "Comment")
+					 {<text>selected="selected"</text>}>Comments</option>
+		</select>
+	</p>
 </section>
+<section>
+	<p>
+		@{
+			for (var i = 0; i < 15; i++)
+			{
+				var postId = Guid.NewGuid();
+			<fieldset class="moderation-item unread" data-post-id="@postId"><legend>@ViewBag.ModerationType
+				Title</legend>
 
-@{
-	for (var i = 0; i < 15; i++)
-	{
-		var postId = Guid.NewGuid();
-		<fieldset class="moderation-item unread" data-post-id="@postId">
-			<legend>@ViewBag.ModerationType Title</legend>
+				<div style="float: left; width: 475px">
+					<p>Aliquam placerat posuere neque, at dignissim magna ullamcorper. The Dude abides.
+						In aliquam sagittis massa ac tortor ultrices faucibus. Nihilists! Jesus. Can we
+						just rent it from you? Curabitur eu mi sapien, ut ultricies ipsum morbi. I like
+						your style, Dude. Eget risus nulla nullam vel nisi enim, vel. Little Lebowski Urban
+						Achievers, yes, and proud we are of all of them. Auctor ante morbi id urna vel felis
+						lacinia.</p>
+				</div>
 
-			<div style="float:left;width:475px">
-				<p>Aliquam placerat posuere neque, at dignissim magna ullamcorper. The Dude abides. In aliquam sagittis massa ac tortor ultrices faucibus. Nihilists! Jesus. Can we just rent it from you? Curabitur eu mi sapien, ut ultricies ipsum morbi. I like your style, Dude. Eget risus nulla nullam vel nisi enim, vel. Little Lebowski Urban Achievers, yes, and proud we are of all of them. Auctor ante morbi id urna vel felis lacinia.</p>
-			</div>
-			<div style="float:left;margin-left:15px;width:110px">
-				<input type="button" class="button" value="Approve"/>
-				<br/>
-				<input type="button" class="button" value="Remove @ViewBag.ModerationType"/>
-				<br/>
-				<input type="button" class="button" value="Block Author"/>
-				<p style="margin-top:25px" class="note last-action" data-post-id="@postId"></p>
-			</div>
-			<div style="clear:both"></div>
+				<div style="float: left; margin-left: 15px; width: 110px">
+					<input type="button" class="button" value="Approve" />
+					<br />
+					<input type="button" class="button" value="Remove @ViewBag.ModerationType"/>
+					<br />
+					<input type="button" class="button" value="Block Author" />
+					<p style="margin-top:25px" class="note last-action" data-post-id="@postId"></p>
+				</div>
 
-		</fieldset>
-	}
-}
+				<div style="clear: both">
+				</div>
+
+			</fieldset>
+			}
+		}
+	</p>
+</section>
