--- a/apps/AdminComposite/Views/Forum/ForumSettings.cshtml
+++ b/apps/AdminComposite/Views/Forum/ForumSettings.cshtml
@@ -2,40 +2,34 @@
 	ViewBag.Title = "Manage Forum Settings";
 }
 
-<script type="text/javascript">
-	$(document).ready(function () {
-		$("#forum-environment-select").tabs();
-	});
-
-</script>
-
 <div class="article-container">
 	<article>
 		<header>
 			<h2>@ViewBag.Title</h2>
 		</header>
-	</article>
+		<nav class="sidetab-switch">
+			<ul>
+				<li><a href="#test" class="default-sidetab current">Test</a></li>
+				<li><a href="#production">Production</a></li>
+			</ul>
+		</nav>
 
-	<div id="forum-environment-select">
-		<ul>
-			<li><a href="#test" class="active">Test</a></li>
-			<li><a href="#production">Production</a></li>
-		</ul>
-
-		<div id="test">
+		<div id="test" class="sidetab default-sidetab">
 			These are the settings for test
-			<br/>
-			<br/>
-			<br/>
-			<input type="button" class="button" value="Copy to Production"/>
+			<br />
+			<br />
+			<br />
+			<input type="button" class="button" value="Copy to Production" />
 		</div>
 
-		<div id="production">
+		<div id="production" class="sidetab" style="display: none">
 			These are the settings for production
-			<br/>
-			<br/>
-			<br/>
-			<input type="button" class="button" value="Copy to Test"/>
+			<br />
+			<br />
+			<br />
+			<input type="button" class="button" value="Copy to Test" />
 		</div>
-	</div>
+
+	</article>
 </div>
+
