--- a/apps/AdminComposite/Views/Organization/Index.cshtml
+++ b/apps/AdminComposite/Views/Organization/Index.cshtml
@@ -48,7 +48,7 @@ section
 <section>
 	<article>
 		<header>
-			<h2 id="organization-name">Organization Name</h2>
+			<h2 id="organization-name">Detail</h2>
 			<input type="button" class="button" value="Edit" id="edit-organization-name" style="float:right"/>
 		</header>
 	</article>
@@ -58,7 +58,7 @@ section
 <section>
 	<article>
 		<header>
-			<h2>Organization Users</h2>
+			<h2>Administrators</h2>
 			<input type="button" class="button" id="add-user" value="Add User" style="float:right"/>
 		</header>
 	</article>
