--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -27,6 +27,7 @@
 	<table>
 		<thead>
 			<tr>
+				<th>Active</th>
 				<th>Name</th>
 				<th>Trigger</th>
 				<th>Image</th>
@@ -35,36 +36,42 @@
 		</thead>
 		<tbody>
 			<tr>
+				<td><input type="checkbox"/></td>
 				<td>Lifetime Achievement Award</td>
 				<td>Total Points greater than 100</td>
 				<td>(image)</td>
 				<td><a href="#">Edit</a></td>
 			</tr>
 			<tr>
+				<td><input type="checkbox"/></td>
 				<td>Key Contributor</td>
 				<td>Total Points greater than 100</td>
 				<td>(image)</td>
 				<td><a href="#">Edit</a></td>
 			</tr>
 			<tr>
+				<td><input type="checkbox"/></td>
 				<td>I've Got Something to Say</td>
 				<td>Total Points greater than 100</td>
 				<td>(image)</td>
 				<td><a href="#">Edit</a></td>
 			</tr>
 			<tr>
+				<td><input type="checkbox"/></td>
 				<td>Conversation Starter</td>
 				<td>Total Points greater than 100</td>
 				<td>(image)</td>
 				<td><a href="#">Edit</a></td>
 			</tr>
 			<tr>
+				<td><input type="checkbox"/></td>
 				<td>Well Received Post</td>
 				<td>Total Points greater than 100</td>
 				<td>(image)</td>
 				<td><a href="#">Edit</a></td>
 			</tr>
 			<tr>
+				<td><input type="checkbox"/></td>
 				<td>The Never Ending Thread</td>
 				<td>Total Points greater than 100</td>
 				<td>(image)</td>
@@ -72,6 +79,9 @@
 			</tr>
 		</tbody>
 	</table>
+	<p>
+		<button>Save</button>
+	</p>
 </article>
 @section Breadcrumbs {
 	<ul id="breadcrumbs">
