--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -23,7 +23,7 @@
 		<h2>Badges</h2>
 		<input type="button" id="create-badge" class="button" value="New Badge" style="float: right" />
 	</header>
-	<p>Lorem ipsum dolor sit consecutator amet. </p>
+	<p>Setting a forum to active means it will be awarded to users when the trigger threshold is satisfied.</p>
 	<table>
 		<thead>
 			<tr>
