--- a/apps/AdminComposite/Views/Forum/ForumSettings.cshtml
+++ b/apps/AdminComposite/Views/Forum/ForumSettings.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-	ViewBag.Title = "Manage Forum Settings";
+	ViewBag.Title = "Forum Details";
 }
 
 <div class="article-container">
@@ -15,7 +15,7 @@
 		</nav>
 
 		<div id="test" class="sidetab default-sidetab">
-			These are the settings for test
+			Items from the new forum modal go here. This is the version of them used for the test site.
 			<br />
 			<br />
 			<br />
@@ -23,7 +23,7 @@
 		</div>
 
 		<div id="production" class="sidetab" style="display: none">
-			These are the settings for production
+			Items from the new forum modal go here. This is the version of them used for the production site.
 			<br />
 			<br />
 			<br />
