--- a/apps/AdminComposite/Views/Moderation/Moderation.cshtml
+++ b/apps/AdminComposite/Views/Moderation/Moderation.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="article-container">
+﻿@{
+	ViewBag.Title = "Moderate Posts & Comments";
+}
+
+<div class="article-container">
 	<article>
 		<header>
 			<h2>@ViewBag.Title</h2>
