--- a/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
+++ b/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
@@ -1,12 +1,12 @@
 ﻿@model object
 @{
-	ViewBag.Title = "Authentication Providers";
+	ViewBag.Title = "Configure Authentication Providers";
 }
 <article>
 	<header>
-		<h2>Select Authentication Method</h2>
+		<h2>@ViewBag.Title</h2>
 	</header>
-	<p>Lorem ipsum dolor sit consecutator amet.</p>
+	<p>An active authentication provider can be used by new users to register and authenticate accounts with your forum.</p>
 	<section>
 		<table>
 			<thead>
