--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -1,5 +1,3 @@
-
-d:\Projects\Euclid\platform>@git.exe %*
 ﻿@model object
 @{
 	ViewBag.Title = "Custom Badges";
@@ -22,7 +20,7 @@ d:\Projects\Euclid\platform>@git.exe %*
 </script>
 <article>
 	<header>
-		<h2>Badges</h2>
+		<h2>Manage Forum Badges</h2>
 		<input type="button" id="create-badge" class="button" value="New Badge" style="float: right" />
 	</header>
 	<p>Lorem ipsum dolor sit consecutator amet. </p>
@@ -81,9 +79,3 @@ d:\Projects\Euclid\platform>@git.exe %*
 		<li>@ViewBag.Title</li>
 	</ul>
 }
-
-d:\Projects\Euclid\platform>@set ErrorLevel=%ErrorLevel%
-
-d:\Projects\Euclid\platform>@rem Restore the original console codepage.
-
-d:\Projects\Euclid\platform>@chcp %cp_oem% > nul < nul
