--- a/apps/AdminComposite/Views/Organization/Index.cshtml
+++ b/apps/AdminComposite/Views/Organization/Index.cshtml
@@ -49,7 +49,7 @@ section
 	<article>
 		<header>
 			<h2 id="organization-name">Detail</h2>
-			<input type="button" class="button" value="Edit" id="edit-organization-name" style="float:right"/>
+			<input type="button" class="button-link" value="Edit" id="edit-organization-name" style="float:right"/>
 		</header>
 	</article>
 </section>
@@ -59,7 +59,7 @@ section
 	<article>
 		<header>
 			<h2>Administrators</h2>
-			<input type="button" class="button" id="add-user" value="Add User" style="float:right"/>
+			<input type="button" class="button-link" id="add-user" value="Add User" style="float:right"/>
 		</header>
 	</article>
 
