--- a/apps/AdminComposite/Views/Shared/_MyForums.cshtml
+++ b/apps/AdminComposite/Views/Shared/_MyForums.cshtml
@@ -6,7 +6,7 @@
 		<article>
 			<header>
 				<h2>Forums</h2>
-				<a href="#" id="new-forum-button" class="button" style="float:right">New Forum</a>
+				<a href="#" id="new-forum-button" class="button-link" style="float:right">New Forum</a>
 			</header>
 		</article>
 
